--- a/style.scss
+++ b/style.scss
@@ -58,21 +58,71 @@
   font-style: normal;
 }
 
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+// Fonts
 $font-logo: FuturaDemiC,
 sans-serif;
 $font-navigation-links: FuturaBookC,
 sans-serif;
 $font-header: Yeseva One,
 sans-serif;
+
+// Colors
 $primary-color: #000000;
 $second-color: #ffffff;
 $second-color2: rgba(255, 255, 255, 0.3);
 $third-color:#E3B873;
 $button-color: $third-color;
 
-.container {
-  max-width: 1440px;
-  margin: 0 auto;
+// Headings
+
+.subtitle_white,
+.subtitle_black {
+  text-align: center;
+  color: $second-color;
+  text-transform: uppercase;
+}
+
+.subtitle_black {
+  color: $primary-color
+}
+
+// Icons
+
+.subtitle_icon {
+  position: relative;
+  margin: 30px auto;
+  width: 200px;
+  height: 29px;
+
+  &:before {
+    display: block;
+    position: absolute;
+    content: "";
+    font-size: 2px;
+    background-color: $third-color;
+    width: 30px;
+    height: 1px;
+    top: 14px;
+    right: 128px;
+  }
+
+  &:after {
+    display: block;
+    position: absolute;
+    content: "";
+    font-size: 2px;
+    background-color: $third-color;
+    width: 30px;
+    height: 1px;
+    top: 14px;
+    left: 125px;
+  }
+
 }
 
 // Header
@@ -425,7 +475,6 @@ $button-color: $third-color;
   }
 }
 
-
 .slider {
   position: relative;
   overflow: hidden;
@@ -519,60 +568,231 @@ $button-color: $third-color;
   }
 }
 
-
 .slider_subcaption {
   display: flex;
 }
 
 // Video wrapper section
 
-.heading_video {
-  position: relative;
-  top: -50px;
-  text-align: center;
-  color: #ffffff;
-  text-transform: uppercase;
-}
-
 .video_wrapper {
-  height: 700px;
   width: 100%;
-  background-color: #ffffff;
-  border: 1px solid black
+  background: linear-gradient(to bottom, $primary-color 50%, $second-color 50%);
 }
 
-.video {
+.video_icon {
+  background: url(assets/video_icon.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
-  width: 70%;
-  height: 400px;
+.video_container {
+  position: relative;
+  width: 57%;
   background: gray;
   margin: 0 auto;
   border: 1px solid black;
 
+  &:after {
+    display: block;
+    position: absolute;
+    content: "";
+    font-size: 2px;
+    background-color: $third-color;
+    width: 30px;
+    height: 1px;
+    bottom: -32px;
+    left: 50%;
+  }
 
+  &--play {
+    display: block;
+    position: absolute;
+    width: 85px;
+    height: 85px;
+    background-color: $third-color;
+    border-radius: 50%;
+    -webkit-box-shadow: 0 0 5px 1px $third-color;
+    box-shadow: 0 0 5px 1px $third-color;
+    top: 42%;
+    left: 45%;
+
+    &:hover {
+      box-shadow: none;
+    }
+
+    &-arrow {
+      position: absolute;
+      width: 21px;
+      height: 26px;
+      left: 42%;
+      top: 36%;
+    }
+  }
+
+}
+
+.video {
+  width: 100%;
+  height: 100%;
 }
 
 .video_description {
   margin: 50px;
-  width: 70%;
+  width: 52%;
   margin: 50px auto;
   text-align: center;
+  font-family: $font-navigation-links;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 34px;
+  text-align: center;
 }
+
+// Section first form
 
 .form_submit {
-  width: 70%;
+  display: flex;
+  justify-content: center;
+  width: 50%;
   margin: 20px auto;
-  text-align: center;
 }
 
-.checkbox {
-  text-align: center;
+.form_submit_block {
+  display: block;
+  text-align: left;
+  width: 235px;
+
+  &--label {
+    display: block;
+    font-family: $font-navigation-links;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 20px;
+    color: rgba(54, 54, 54, 0.5);
+  }
+
+  &--input {
+    font-family: $font-navigation-links;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24px;
+    height: 30px;
+    color: #363636;
+    border: 0;
+    border-bottom: 1px solid rgba(54, 54, 54, 0.5);
+
+  }
+
+  &--button {
+    width: 200px;
+    height: 51px;
+    background-color: $button-color;
+    border: 0;
+    font-family: $font-logo;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: $second-color;
+    cursor: pointer;
+    border-radius: 2px;
+    box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+  }
+}
+
+// Checkbox style
+.form_submit_checkbox {
+  margin: 0 auto;
+  width: 30%;
+}
+
+.control {
+  font-family: $font-navigation-links;
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 5px;
+  padding-top: 3px;
+  cursor: pointer;
+  font-size: 16px;
+  color: #181818;
+
+}
+
+.control input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.control_indicator {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background: #e6e6e6;
+  border: 0px solid #000000;
+  border-radius: 0px;
+}
+
+.control:hover input~.control_indicator,
+.control input:focus~.control_indicator {
+  background: #cccccc;
+}
+
+.control input:checked~.control_indicator {
+  background: #e3b873;
+}
+
+.control:hover input:not([disabled]):checked~.control_indicator,
+.control input:checked:focus~.control_indicator {
+  background: #e3b873;
+}
+
+.control input:disabled~.control_indicator {
+  background: #e6e6e6;
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.control_indicator:after {
+  box-sizing: unset;
+  content: '';
+  position: absolute;
+  display: none;
+}
+
+.control input:checked~.control_indicator:after {
+  display: block;
+}
+
+.control-checkbox .control_indicator:after {
+  left: 8px;
+  top: 4px;
+  width: 3px;
+  height: 8px;
+  border: solid #ffffff;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+.control-checkbox input:disabled~.control_indicator:after {
+  border-color: #7b7b7b;
 }
 
 // Price repair section
 
-.hedding_price {
-  text-align: center;
+.price_container {
+  position: relative;
+  margin-top: 140px;
+}
+
+.repair_icon {
+  background: url(assets/repair_icon.png);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .price_wrapper {
@@ -580,26 +800,79 @@ $button-color: $third-color;
   position: relative;
   justify-content: center;
   width: 100%;
-  height: 400px;
   align-items: center;
   top: 30px;
 }
 
 .price_card {
   position: relative;
+  background: url(assets/product1.jpg) no-repeat;
   margin: 10px;
-  width: 20%;
-  height: 300px;
-  background-color: gray;
+  width: 392px;
+  height: 608px;
+
+  &:nth-child(2) {
+    background: url(assets/product2.jpg) no-repeat;
+  }
+
+  &:last-child {
+    background: url(assets/product3.jpg) no-repeat;
+  }
+
+  &--button {
+    position: absolute;
+    width: 228px;
+    height: 54px;
+    background-color: $button-color;
+    margin-top: 22px;
+    margin-right: 100px;
+    border: 0;
+    font-family: $font-header;
+    font-size: 18px;
+    line-height: 25px;
+    text-transform: uppercase;
+    color: $second-color;
+    cursor: pointer;
+    box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+    bottom:0px;
+    left:31px;
+
+    &:hover {
+      box-shadow: none;
+    }
+  }
 }
 
 .card_description {
   position: absolute;
-  width: 95%;
-  height: 150px;
+  width: 330px;
+  height: 286px;
   background-color: #ffffff;
   bottom: 20px;
+  left: 31px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
 
+
+  &--header {
+
+    font-family: $font-header;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
+    color: #363636;
+    margin: 25px 31px 13px 31px;
+  }
+
+  &--list {
+    font-family: $font-navigation-links;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 25px;
+    margin: 0px 46px;
+    color: #959595;
+  }
 }
 
 // Contact form section
