refactor: upgraid styles in design project section

--- a/style.css
+++ b/style.css
@@ -1249,12 +1249,62 @@
 
 .design_project {
   margin-top: 142px;
+  height: 950px;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(50%, #000000), color-stop(50%, #ffffff));
+  background: linear-gradient(to top, #000000 50%, #ffffff 50%);
 }
 
 .design_project--description {
   text-align: center;
   width: 60%;
   margin: auto;
+  font-family: FuturaBookC, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 27px;
+  width: 665px;
+}
+
+.design_project >
+.price_wrapper >
+.price_card:nth-child(1) >
+.card_description {
+  height: 215px;
+  bottom: 91px;
+}
+
+.design_project >
+.price_wrapper >
+.price_card:nth-child(3) >
+.card_description {
+  height: 415px;
+  bottom: -110px;
+}
+
+.purchase {
+  position: absolute;
+  width: 228px;
+  height: 54px;
+  background-color: #E3B873;
+  margin-top: 22px;
+  margin-right: 100px;
+  border: 0;
+  font-family: Yeseva One, sans-serif;
+  font-size: 18px;
+  line-height: 25px;
+  text-transform: uppercase;
+  color: #ffffff;
+  cursor: pointer;
+  -webkit-box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+          box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+  bottom: -20px;
+  left: 0px;
+}
+
+.purchase:hover {
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .design_icon {
